egress-external-https-proxy-integration/service-mesh/http-proxy/tcp-gateway/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-via-egress-gateway
spec:
  hosts:
  - external-app.corp.net
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  tcp:
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: external-forward-proxy.corp.net
        subset: external-app-80
        port:
          number: 3080
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
    route:
    - destination:
        host: external-forward-proxy.corp.net
        subset: external-app-443
#        subset: external-app-8443
        port:
          number: 3080
